# qtodolist

./: CMakeLists.txt  readme.md
src/: CMakeLists.txt  main.cpp  qitem.cpp  qitem.h  qitem.ui  qitemlist.cpp  qitemlist.h  qtodolist.cpp  qtodolist.h  qtodolist.qrc  qtodolist.ui  sidebarwidget.cpp  sidebarwidget.h  sidebarwidget.ui  sqldata.cpp  sqldata.h  timedialog.cpp  timedialog.h  timedialog.ui
